# device-tools

./: .gitignore  .releaserc  LICENSE.md  README.md  hacs.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: quality.yml  release.yml
custom_components/device_tools/: __init__.py  config_flow.py  const.py  data.py  device_listener.py  device_modification.py  device_modification_registry.py  device_tools.py  entity_listener.py  entity_modification.py  entry_modification.py  listener.py  manifest.json  merge_modification.py  models.py  modification.py  storage.py  utils.py
custom_components/device_tools/models/: attribute_modification.py  config_entry_data.py  device_modification.py  entity_modification.py
custom_components/device_tools/translations/: de.json  en.json
custom_components/dummy/: __init__.py  binary_sensor.py  config_flow.py  manifest.json
integration_tests/: __init__.py  conftest.py  const.py  test_device_tools.py  test_modification.py
tests/: __init__.py  conftest.py  const.py  test_device_listener.py  test_device_modification_registry.py  test_device_tools.py  test_dummy.py  test_entity_listener.py
