[project]
name = "device-tools"
authors = [{ name = "Lennard Beers", email = "l.beers@outlook.de" }]
maintainers = [{ name = "Lennard Beers", email = "l.beers@outlook.de" }]
license = { file = "LICENSE.md" }
keywords = [
    "homeassistant",
    "custom-component",
    "device-tools",
    "device",
    "tools",
    "integration",
    "home-assistant",
    "home-assistant-custom-component",
    "home-assistant-integration",
    "home-assistant-integration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Users",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
description = "A custom component for Home Assistant to create and modify devices."
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.0"
dependencies = []

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "homeassistant-stubs",
    "voluptuous-stubs",
    "homeassistant>=2024.12.0",
]
test = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-homeassistant-custom-component>=0.13.190",
]

[project.urls]
Repository = "https://github.com/eulemitkeule/device-tools"
Documentation = "https://github.com/eulemitkeule/device-tools/blob/master/README.md"
Changelog = "https://github.com/EuleMitKeule/device-tools/releases"
Issues = "https://github.com/eulemitkeule/device-tools/issues"

[tool.mypy]
check_untyped_defs = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = ["D", "ARG"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"!custom_components/device_tools/**.py" = ["D", "ARG"]
